c4prj2_input/grade.txt
Grading at Tue Mar  9 08:47:08 UTC 2021
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:21:30: error: incompatible types when assigning to type ‘deck_t {aka struct deck_tag}’ from type ‘deck_t * {aka struct deck_tag *}’
       fc->decks[fc->n_decks] = ptr;
                              ^
Compilation of input.c failed

Overall Grade: F
